--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -20,3 +20,6 @@ Suggests:
 VignetteBuilder: knitr
 Depends: 
     R (>= 2.10)
+URL: http://github.com/sokbae/ciccr
+BugReports: http://github.com/sokbae/ciccr/issues
+
