--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,7 +12,8 @@ Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.1
 Imports: 
-    stats
+    stats,
+    MASS
 Suggests: 
     knitr,
     rmarkdown,
