--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,12 +13,12 @@ Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.1
 Imports: 
-    stats,
-    MASS
+    stats
 Suggests: 
     knitr,
     rmarkdown,
-    testthat
+    testthat,
+    MASS
 VignetteBuilder: knitr
 Depends: 
     R (>= 2.10)
