--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,7 +17,8 @@ Imports:
 Suggests: 
     knitr,
     rmarkdown,
-    testthat
+    testthat,
+    MASS
 VignetteBuilder: knitr
 Depends: 
     R (>= 2.10)
