--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(avg_AR_logit)
 export(avg_RR_logit)
 export(avg_retro_logit)
 export(cicc)
+export(ciccRR)
 export(cicc_AR)
 export(cicc_RR)
 export(cicc_plot)
