Major updates on codes and documents

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,8 +5,8 @@ Version: 0.1.0.9000
 Authors@R: c(
     person("Sung Jae", "Jun", email = "suj14@psu.edu", role = "aut"),
     person("Sokbae", "Lee", email = "sl3841@columbia.edu", role = c("aut", "cre")))
-Description: Estimation and inference methods for causal relative risk.
-    Semiparametrically efficient estimation of the aggregated (log) odds ratio and a causal inference procedure for relative risk. 
+Description: Estimation and inference methods for causal relative and attributable risk in case-control and case-population studies.
+    Semiparametrically efficient estimation of the aggregated (log) odds ratio and causal inference procedures for relative and attributable risk. 
     For more details, see the paper by Jun and Lee (2020), "Causal Inference in Case-Control Studies," <arXiv:2004.08318 [econ.EM]>.
 License: GPL-3
 Encoding: UTF-8
