--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,12 +13,15 @@ Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.1
 Imports: 
-    stats
+    stats,
+    glmnet
 Suggests: 
     knitr,
     rmarkdown,
     testthat,
-    MASS
+    MASS,
+    splines,
+    Matrix
 VignetteBuilder: knitr
 Depends: 
     R (>= 2.10)
