--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,15 @@
 Package: ciccr
 Type: Package
-Title: Causal Inference in Case-Control Studies
+Title: Causal Inference in Case-Control and Case-Population Studies
 Version: 0.2.0.900
 Authors@R: c(
     person("Sung Jae", "Jun", email = "suj14@psu.edu", role = "aut"),
     person("Sokbae", "Lee", email = "sl3841@columbia.edu", role = c("aut", "cre")))
-Description: Estimation and inference methods for causal relative and attributable risk in case-control and case-population studies.
-    Semiparametrically efficient estimation of the aggregated (log) odds ratio and causal inference procedures for relative and attributable risk. 
-    For more details, see the paper by Jun and Lee (2020), "Causal Inference in Case-Control Studies," <arXiv:2004.08318 [econ.EM]>.
+Description: Estimation and inference methods for causal relative and attributable risk in case-control and case-population studies
+  under the monotone treatment response (MTR) and monotone treatment selection (MTS) assumptions.
+  For more details, see the paper by Jun and Lee (2023), 
+  "Causal Inference under Outcome-Based Sampling with Monotonicity Assumptions," <arXiv:2004.08318 [econ.EM]>,
+  accepted for publication in Journal of Business & Economic Statistics.
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
