--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,7 +6,7 @@ Authors@R: c(
     person("Sung Jae", "Jun", email = "suj14@psu.edu", role = "aut"),
     person("Sokbae", "Lee", email = "sl3841@columbia.edu", role = c("aut", "cre")))
 Description: Estimation and inference methods for causal relative and attributable risk in case-control and case-population studies
-  under the monotone treatment response (MTR) and monotone treatment selection (MTS) assumptions.
+  under the monotone treatment response and monotone treatment selection assumptions.
   For more details, see the paper by Jun and Lee (2023), 
   "Causal Inference under Outcome-Based Sampling with Monotonicity Assumptions," <arXiv:2004.08318 [econ.EM]>,
   accepted for publication in Journal of Business & Economic Statistics.
